--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -28,6 +28,15 @@ body,
   height: 100%;
 }
 
+.iframe::-webkit-scrollbar {
+  display: none; /* for Chrome, Safari, and Opera */
+}
+
+.iframe {
+  -ms-overflow-style: none; /* for Internet Explorer, Edge */
+  scrollbar-width: none; /* for Firefox */
+}
+
 /*.item::before {*/
 /*  content: "";*/
 /*  display: block;*/
