--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -103,3 +103,32 @@ body,
 .popup-content > div {
   color: #202020 !important;
 }
+
+.conduct {
+  font-weight: normal;
+}
+
+.conduct h1 {
+  font-size: 1.5rem;
+  text-align: center;
+}
+
+.conduct h1 {
+  font-size: 1.5rem;
+  margin-bottom: 1.5rem;
+}
+
+.conduct h2 {
+  font-size: 1.25rem;
+  margin-top: 1.5rem;
+}
+
+.conduct p,
+.conduct ul {
+  font-size: 1.125rem;
+  color: rgba(255, 255, 255, 0.5);
+}
+
+.conduct a {
+  text-decoration: underline;
+}
