--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -43,6 +43,17 @@ body,
   scrollbar-width: none; /* for Firefox */
 }
 
+::-webkit-scrollbar {
+  display: none;
+}
+* {
+  -ms-overflow-style: none; /* for Internet Explorer, Edge */
+  scrollbar-width: none; /* for Firefox */
+}
+
+*::-webkit-scrollbar {
+  display: none; /* for Chrome, Safari, and Opera */
+}
 /*.item::before {*/
 /*  content: "";*/
 /*  display: block;*/
