--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -229,3 +229,8 @@ body,
   -webkit-animation-timing-function: ease-in-out;
   animation-timing-function: ease-in-out;
 }
+
+.pre-model-viewer > * {
+  width: 100%;
+  height: 100%;
+}
